Lakhan S | Updated  index_old.html code

--- a/templates/index_old.html
+++ b/templates/index_old.html
@@ -14,10 +14,10 @@
     <div class="main-content">
       <div class="file-upload-section">
         <div class="header">
-          <img
+          <!-- <img
             src=""
             alt="AI Logo"
-          />
+          /> -->
           <div class="demo-text">MDHT AI</div>
         </div>
         <div id="filesList">
@@ -72,7 +72,7 @@
               required
             ></textarea>
             <div class="button-group">
-              <button type="submit" id="send-btn">&#x2191;</button>
+              <button type="submit" id="send-btn"> Send </button>
             </div>
           </form>
         </div>
@@ -340,3 +340,5 @@
     </script>
   </body>
 </html>
+
+
