--- a/static/main.css
+++ b/static/main.css
@@ -47,11 +47,11 @@ h3 {
 }
 
 .chat-container {
-  max-width: 600px;
-  width: 70%;
-  padding: 20px;
+  max-width: 1120px;
+  width: 100%;
+  padding: 10px;
   margin: 0 auto;
-  padding-top: 40px;
+  padding-top: 20px;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -59,7 +59,8 @@ h3 {
   overflow-y: auto;
   box-sizing: border-box;
   justify-content: space-between;
-}
+  background-color:#e4ebe4;
+} 
 
 .user-message,
 .assistant-message {
@@ -74,11 +75,13 @@ h3 {
 .user-message {
   align-self: flex-end !important;
   background-color: #ceb6f4;
+  margin-right: 8px;
 }
 
 .assistant-message {
   align-self: flex-start !important;
   background-color: #a7cdeb;
+  margin-left: 10px;
 }
 
 .message-input-container {
@@ -90,6 +93,7 @@ h3 {
   justify-content: center;
   align-items: start;
   z-index: 100;
+  background-color: #e4ebe4;
 }
 
 .message-input-container form {
@@ -118,8 +122,9 @@ textarea {
   margin-right: 10px;
   flex-grow: 1;
   padding: 8px 12px;
-  max-height: 32px;
+  max-height: 100px;
   box-sizing: border-box; /* Include padding in the element's total dimensions */
+  height: 80px;
 }
 
 input[type="submit"],
@@ -287,16 +292,18 @@ input[type="text"] {
   font-size: 12pt;
   color: #000000;
   margin-bottom: 4px;
+  margin-left: 10px;
 }
 
 .message-role.user {
   align-self: flex-end;
+  margin-right: 8px;
 }
 
 #send-btn {
-  width: 62px;
-  height: 32px;
-  border-radius: 4px;
+  width: 80px;
+  height: 50px;
+  border-radius: 6px;
   border: 2px solid #c5c5d2;
   background-color: #1258a2;
   color: #fff;
@@ -315,6 +322,7 @@ input[type="text"] {
   box-sizing: border-box;
   border-right: 3px solid #0c0b0f;
   background-color: #e4ebe4;
+  width : 30%
 
 }
 .centered-text {
